# ChangeLog for dev-libs/libgee
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libgee/ChangeLog,v 1.52 2012/09/30 07:15:04 tetromino Exp $

*libgee-0.8.0 (30 Sep 2012)

  30 Sep 2012; Alexandre Rostovtsev <tetromino@gentoo.org> libgee-0.6.4.ebuild,
  libgee-0.6.5.ebuild, -libgee-0.7.2.ebuild, libgee-0.7.4.1.ebuild,
  +libgee-0.8.0.ebuild:
  Bump, update license, drop old.

*libgee-0.7.4.1 (24 Aug 2012)

  24 Aug 2012; Gilles Dartiguelongue <eva@gentoo.org> +libgee-0.7.4.1.ebuild:
  Version bump.

*libgee-0.6.5 (24 Aug 2012)

  24 Aug 2012; Gilles Dartiguelongue <eva@gentoo.org> -libgee-0.6.2.1.ebuild,
  -libgee-0.6.3.ebuild, +libgee-0.6.5.ebuild, -libgee-0.7.1.ebuild:
  Version bump. Cleanup old revisions.

  15 Jul 2012; Raúl Porcel <armin76@gentoo.org> libgee-0.6.4.ebuild:
  alpha/ia64/sh/sparc stable wrt #410611

  24 May 2012; Samuli Suominen <ssuominen@gentoo.org> libgee-0.6.4.ebuild:
  ppc stable wrt #410611

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> libgee-0.6.2.1.ebuild,
  libgee-0.6.3.ebuild, libgee-0.6.4.ebuild, libgee-0.7.1.ebuild,
  libgee-0.7.2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  29 Apr 2012; Markus Meier <maekke@gentoo.org> libgee-0.6.4.ebuild:
  x86 stable, bug #410611

  25 Apr 2012; Markus Meier <maekke@gentoo.org> libgee-0.6.4.ebuild:
  arm stable, bug #410611

  19 Apr 2012; Brent Baude <ranger@gentoo.org> libgee-0.6.4.ebuild:
  Marking libgee-0.6.4 ppc64 stable for bug 410611

  18 Apr 2012; Agostino Sarubbo <ago@gentoo.org> libgee-0.6.4.ebuild:
  Stable for amd64, wrt bug #410611

  25 Mar 2012; Raúl Porcel <armin76@gentoo.org> libgee-0.6.3.ebuild:
  alpha/ia64/sh/sparc stable wrt #393007

  05 Mar 2012; Brent Baude <ranger@gentoo.org> libgee-0.6.3.ebuild:
  Marking libgee-0.6.3 ppc stable for bug 393007

  05 Mar 2012; Brent Baude <ranger@gentoo.org> libgee-0.6.3.ebuild: