@@ -3,22 +3,24 @@ Hash: SHA256
 
 DIST libgee-0.6.4.tar.xz 432732 SHA256 55f39f3b28e676f6cbd9377d83edd031084436a4da41280a9503c94faffb1665 SHA512 a0934337e8f3199f84d59d308e9a6e471c59a2484e7d4a35a800bfe422489866257732c769c8c53a448dcdbdf2ec0109b90e5472ef4319736a84114a339b4cd8 WHIRLPOOL 537f538d2740cbfb11f8ec00a49b519679e57da6f4cc87c1ff205a812ba8e7ae710bd749700c4c69fde47ab18564519dfc0024bba5ff9b2eec9c26b7109fef40
 DIST libgee-0.6.5.tar.xz 439156 SHA256 99b78db2492c533e386a07bce9aab1de4bdf23284b1a485b893683de388fff48 SHA512 4aa6b0f4ab6012cd398440e082c30fcb798821a416eab3c2a3127826b1422ae41999d68f643c9393d30afd88de86108365989bae1643c4413e54c4beb2c31876 WHIRLPOOL 78d13ef819903c988d58d74edd7d3c1aa18215e6052638c2f70dfaa90bdd1cc4a982c0eb59d83584906aa5af7a7e829ccb5ec5404f8aad969b0859b51323218d
-DIST libgee-0.7.4.1.tar.xz 572712 SHA256 84f0b156bd2dbf094332953d3c3f0dc78bd18c77b91a5d1e2ada0273cf9cb5ee SHA512 c4cd6065114eb675a3cf0e15cc934fd1f8ff87442341aff96e80429085c9d2233ccb5f4bc18881bb62b3a69db1230c4cbedab847e47cc336a938389209ec181d WHIRLPOOL 92d1749a117b43c85bde0db22a5e2b644f6296947fe12cdf2f3c5d0ecaf92342c679aa6b1c4268480112a0a94e71e6cc83777dd0dd036a0a2cddcd01d5ef1948
+DIST libgee-0.6.6.tar.xz 442624 SHA256 b6b008a6b84332b88f5a12f33d56a3fa3a307946cdd70bc17a403822d4f02e7b SHA512 ae953a47d02e8ff176ae341c3cf1150995dab47da7c94e7bdeb33b68be43ebd926bad30c9740316fb221fbf39d7bf57e0a8ddf8f00647918e3922fddbaf8fc13 WHIRLPOOL c0b2f3ffba2e560e93d5425d96e7dac6e807669e67df68957c44066953eb739ba560341f66ddf02d06523a00df750c598816eea5017bb5caf4364c7cd655bb4a
 DIST libgee-0.8.0.tar.xz 579640 SHA256 5e3707cbc1cebea86ab8865682cb28f8f80273869551c3698e396b5dc57831ea SHA512 3288bfe989baeabfd89304d8d440e5dfe0e2ade3fc433a4d382bc16919fb50c8a7fa3482222cdb25f28139dc0a90a595fc4453618c7ca07bd98b75180951106d WHIRLPOOL eabc71daed947752cf14378841e3a66a1c30369160d86bfe3425422da53650c6988a87e4d1e156c8f57cb53128d8fd5db704227eebaa2016271f8adc60630c29
+DIST libgee-0.8.1.tar.xz 582880 SHA256 01568465b41074b7539baa15a74e8e51dc9f5d8c902cea56c0e4da9d0eb03ad1 SHA512 737419540ce2ada1f08f19be070cf979f29fb81279a37c2020451f05de211c67c820b352d90e3aeb8a073d9dff697aa8ada0fd8eee0d355569c64d7714cf9349 WHIRLPOOL fd040659065cc35a33ad535ae5e14b55d4f170676d4a8ef212a62cc6c521fee88e670aca7bd5c6fb37066a1d9bb91526300f8a33e20cb039854a9fb5ad2b4e0f
 EBUILD libgee-0.6.4.ebuild 786 SHA256 329e154ac9ba131ac3ea8e1450643ffcfc9573a9737b116bbb810e31f6506877 SHA512 d76dca4fcb0523d351fa320c4137554196da24de24c9b2cfcc4d3d1a652f49196ef64de3f25ca5683ff50c9e08f59a5024e62efbc52139488ff7be1f824cb7f5 WHIRLPOOL 91d031d1d86d64054d6fdca25aa6d7dfe9c0f3d9e197b3db080fe66e309296d3192e797415f25e1f38ef98d705f426e84fb519b0cc31cb5bf7ca156414dd9108
 EBUILD libgee-0.6.5.ebuild 821 SHA256 69e744c2f19858a6e5066f9aedef871105f24611b0d16c9ec4969257c1a233a9 SHA512 8b434870be858ea0a57ce0e64f938a9f530abf1b3fd94df0fb0543550c255001726eebdfeb2709b660f76397b83e695500a31ff42af3de344556b4ce3c452bbd WHIRLPOOL 7137e47315c097619c4eb9c3e3ed4093587a593b8763fad07e17ca652ec19391de5b320781113236979f6223a006687d01c00e9e6a80f46927ad7c5b2aea7d1b
-EBUILD libgee-0.7.4.1.ebuild 929 SHA256 6f81774b68dc79f0ad54cd48e0ad4e1117669fe0803aefbc5d275e684d3d868e SHA512 36f8b302b33ab6ca42cbaccd79837efa319f14da6932bfcd82981248d5c5eab9c3c4e38cfd82fd9dfcc4f29b24f24fdb5234e2da530db8f296ba80c074fcb96c WHIRLPOOL 2874d64d042dade3c5d996704059ecc9942a4a501448405cc1f7bed8883858e519f5ab1074932f7aad91d8b9a44d333735ea9d0f0e8501fe202de93cc0348563
+EBUILD libgee-0.6.6.ebuild 821 SHA256 3b6b717da4be96d61e696d9dc34292bd797027d34328f9d22267f96a9258507d SHA512 35d4979f26660b1953d2a31d0a685220e90dad1f9e6c0b38110700d2ea456c955aba0d2acb4c15ee318d43618ea5cc8f56efab2988d74e375a687de7130f49e0 WHIRLPOOL f5c7a506e3652d45129bd37de8caa5f7107f8a201f86bba10199fdb8f3fecef3dfee5b9e5229d83e03ac912b5047102095d2ef8e5d636b7bca3d221ed177b171
 EBUILD libgee-0.8.0.ebuild 996 SHA256 643358abe3b4e62723532a190cf95801f974cdb1fedc8b9f515ec21135584406 SHA512 23db1fad5f3f1f0c0ac0bace595c6e169f03e0b432362f4fe857d236f6f2b5e0e006fb13881f7dd0144f2f82af60bc836b1ede94f0921a94e1a5eecbcae5d460 WHIRLPOOL 2d0eeb546846ca5f08685782bc72e320c59c68a136e48816f5121f048ac06ab04f5ae958bd4c24938ec7fd89d1ee1629881c6f500502c093d859ac2f742d4a4c
-MISC ChangeLog 7374 SHA256 4707ceda90e19c155448db850feaa8e89a19c2dcba99ef8ee9af412c1035e859 SHA512 a8e1c56d348b9837a62a65d3905c8377de954140e52420beb0c66e85d21b9a372eedf59ee1a61fe3a4142bb46d019e55a1ccd09d96f1f9b6fa39d357021a3e1e WHIRLPOOL 964711cc761759a81e50adf6d231d05c7d120d91a0615c573a7b83c34e5e3a4b4fa9155b334559226e325b5cfbda7cb3c24344cbc6fd1679c5af8172e875ba77
+EBUILD libgee-0.8.1.ebuild 996 SHA256 7b04086cc2f4e5eeaeb41bd0ca26c302502e7b72b64c8a1156151d641612ed36 SHA512 65573ac44ef215280453ab168710b1343dcebe4c5d51f6540dffe5230a9a5578c0d17767d4e07b8edada2e7f21443dd2ea01dffeb8f9ff60c083fcae627ff6cc WHIRLPOOL fdd7919d1e6be12b0761715d68570321c4b68d4beb1864ca9094b1a92ceca5ce65c3f6e66b38a67512dfd013ae3ad6c742de5c9eeb28079292fdab12b13c89e0
+MISC ChangeLog 7587 SHA256 fcd8bd23035061f5f779c8dce28aca168a9fd3459c2f06ab0fb199fcdd16fb4d SHA512 2936230de7e0f694ad0f0584515155d46eebc8f36b25d81321a2e486ac8a847fc377b5b323c9046c86d20d719b3750344719223e0da4fa8dcd2452d7fd8387f2 WHIRLPOOL 81dc110ed20e657ff6aee1b8b848b0342f605e4cd640c583ceec2d5f3fb539c97fae545b2aebeead08b336c8b068e692d52666463b3bf076c42f3d7fb5d22b53
 MISC metadata.xml 434 SHA256 384e8ce2e873e4f3567a0dbf8824765af2f43575e6c72c52e67eb77fd50b9cc6 SHA512 e69434c15859897163b599cb517411b9106783c6ce8b5d765d6da7346bfe5bd14173510f1439f3fea10ed3e617a0f1767d5038f246d9d406560658d1f7372eb0 WHIRLPOOL ee315f2cc6b137ef6260e34157cf905747426de4dc92431c2c89bfd990b901512e79f278ceb1f5f576507e6d88917fc8b9472f966894ec3b998df3e8f9c7454d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQZ/GHAAoJEJ0WA1zPCt1hi5EH/1v5hhsUf4Twt/7a5WQ/GB9H
-SVHaxnGO+nXjnnREpdUfkODLWRq8syfXpCupqBQerrXVxT1Z8A/v6fNxdaTvS7Vc
-yanV0dGV/5LygzfJ1L6VGFe78OAySIptUieqtNqjYiZrNCrjiHQi45KhofpC6U+b
-l1979+V4RfOKhWw85UyAO2mUgj8RfohavvI1epdHBxe3QqCcHbNYVZooK5Uq5fZo
-aAah3r1nq+7iv44ZMcDjOY//QT0J1x0ndyHLlvxQDwZ25twLWTRQrpfwQJHXyaCB
-usRvOsrP+m6U+6xv7tWKLH1/1Hof8I16Zx3930tVQivr8pSK8/oNYNoqmgyhVdY=
-=NUT3
+iQEcBAEBCAAGBQJQeyLtAAoJEJ0WA1zPCt1htjoIAKP6TnVHgTNBCTFxlMOlitLa
+ryvvWtRtobSGPDWObka8DoAndQC/P3MbOpDNiQu1VQPgg+A+y5TokpDBfdmks271
+EalmfgP/fjcZm0dbqi9BvVhk3bqzsw7Xya1XRiF7ngkuojKIOB0i6rC1EG2uksBl
+MItWQ42rzaJVl2nO1YWCi1J8WazRFG4Y+OhPAbLmYZMCq4MlVgzgDZuajN8a7XzT
+d1y6e5mK+USyiYGcmAx7gdBz558L404/Jq7wifAfnlLFTo1f/TheHhymMi3azSPH
+o0U2qARyYE8ho0ZRhln9Ba7KDpZaEblikDXhcVXyCDjsuIv1NI9hwAicWRm3yn8=
+=gq/j
 -----END PGP SIGNATURE-----
