@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libgee/Attic/libgee-0.7.4.1.ebuild,v 1.2 2012/09/30 07:15:04 tetromino Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libgee/libgee-0.6.6.ebuild,v 1.1 2012/10/14 20:39:08 tetromino Exp $
 
 EAPI="4"
 GCONF_DEBUG="no"
@@ -12,22 +12,18 @@ DESCRIPTION="GObject-based interfaces and classes for commonly used data structu
 HOMEPAGE="http://live.gnome.org/Libgee"
 
 LICENSE="LGPL-2.1+"
-SLOT="0.8"
+SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86 ~x86-linux"
 IUSE="+introspection"
 
-# FIXME: add doc support, requires valadoc
 RDEPEND=">=dev-libs/glib-2.12:2
 	introspection? ( >=dev-libs/gobject-introspection-0.9.6 )"
 DEPEND="${RDEPEND}
-	virtual/pkgconfig
-	>=dev-lang/vala-0.17.5:0.18"
+	virtual/pkgconfig"
 
 DOCS="AUTHORS ChangeLog* MAINTAINERS NEWS README"
 
 src_configure() {
-	G2CONF="${G2CONF}
-		$(use_enable introspection)
-		VALAC=$(type -P valac-0.18)"
+	G2CONF="${G2CONF} $(use_enable introspection)"
 	gnome2_src_configure
 }
